--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 	<body>
 		<div class="container">
+			<div class="header">Set timer:</div>
             <div class="clock ">
-                <input class="number" type="text" maxlength="2"><span> hs </span><input class="number" type="text" maxlength="2"><span> min </span><input class="number" type="text" maxlength="2"><span> seg </span>
+                <input class="number" type="text" maxlength="2"><span> hs </span><input class="number" type="text" maxlength="2"><span> min </span><input class="number" type="text" maxlength="2"><span> sec </span>
             </div>
             <div class="buttons">
                 <button id="play" onclick="startTimer()"></button>
